Scrollbar bug fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+*{
+  scroll-behavior: smooth;
+}
